--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,279 @@
-.App {
-  text-align: center;
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
+
+:root {
+  --main-font-color: hsl(225, 20%, 60%);
+  --bolded-color: hsl(227, 35%, 25%);
+  --bg-color: hsl(230, 100%, 99%);
+  --button-color: hsl(226, 100%, 87%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  font-family: 'Manrope', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
+.app {
+  display: flex;
+  flex-direction: column; 
   min-height: 100vh;
+  background-color: var(--bg-color);
+  background-image: url('./images/bg-pattern.svg');
+  background-repeat: no-repeat;
+  background-size: 100% 50%;
+  color: var(--main-font-color);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5vh auto;
+  padding: 9px;
+  background-image: url('./images/pattern-circles.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
+
+.header h1 {
+  font-size: 28px;
+  color: hsl(227, 35%, 25%);
+}
+
+.header p {
+  font-size: 15px;
+}
+
+.box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 550px;
+  height: 350px;
+  background-color: hsl(0, 0%, 100%);
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 30px 20px -20px lightgrey;
 }
 
-.App-link {
-  color: #61dafb;
+.box .heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
+.heading {
+  font-size: 14px;
+}
+
+.heading span {
+  font-size: 2rem;
+  color: var(--bolded-color);
+}
+
+.box .top {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 75%;
+  width: 100%;
+  padding: 10px 50px;
+}
+
+.top .yearly {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.box .range {
+  width: 100%;
+}
+
+.box .billing {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin: 10px 15px 0px auto;
+  gap: 16px;
+}
+
+.billing .discount {
+  color: hsl(15, 100%, 70%);
+  background-color: hsl(14, 92%, 95%);
+  padding: 2px 9px;
+  border-radius: 8px;
+  font-size: 12px;
+}
+
+.box .bottom {
+  border-top: 2px solid lightgrey;
+  padding: 15px 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+.bottom .features p {
+  display: flex;
+  align-items: center;
+  color: var(--main-font-color);
+}
+
+.bottom .features p::before {
+  content: '';
+  position: relative;
+  margin: 0 1rem 0 0;
+  width: 15px;
+  height: 15px;
+  background-image: url('./images/icon-check.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.bottom button {
+  color: var(--button-color);
+  background-color: var(--bolded-color);
+  border: none;
+  border-radius: 20px;
+  padding: 8px 40px;
+  transition: transform 0.25s;
+}
+
+.bottom button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.bottom button:focus {
+  outline: none;
+}
+
+/* Build Switch */
+.label {
+  display: flex;
+  /* align-items: center; */
+  background-color: hsl(223, 50%, 87%);
+  /* height: 20px; */
+  width: 45px;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 2px;
+}
+
+.checkbox {
+  position: absolute;
+  height: 0;
+  width: 0;
+}
+
+.ball {
+  background-color: white;
+  position: relative;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+}
+
+.green {
+  background-color: lightgreen;
+  background-color :hsl(174, 77%, 80%);
+  background-color :hsl(174, 86%, 45%);
+}
+
+.move-right {
+  right: -63.4%;
+  animation: animate-right 0.25s;
+}
+
+@keyframes animate-right {
   from {
-    transform: rotate(0deg);
+    right: 0;
   }
   to {
-    transform: rotate(360deg);
+    right: -63.4%;
   }
 }
+
+.move-left {
+  right: 0;
+  animation: animate-left 0.25s;
+}
+
+@keyframes animate-left {
+  from {
+    right: -63.4%;
+  }
+  to {
+    right: 0;
+  }
+}
+
+
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  outline: none;
+  width: 100%;
+  height: 8px;
+  background-color: hsl(224, 65%, 95%);
+  border-radius: 5px;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  background-color: hsl(174, 86%, 45%);
+  background-image: url('./images/icon-slider.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* .slider::-webkit-slider-runnable-track {
+  background-color: green;
+} */
+
+.slider::-webkit-slider-thumb:hover {
+  cursor: pointer;
+}
+
+.slider::-webkit-slider-thumb:active {
+  cursor: grab;
+}
+
+/* For firefox */
+.slider::-moz-range-thumb {
+  width: 37px;
+  height: 37px;
+  border: none;
+  border-radius: 50%;
+  background-color: hsl(174, 86%, 45%);
+  background-image: url('./images/icon-slider.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.slider::-moz-range-thumb:hover {
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb:active {
+  cursor: grab;
+}
+
+
+/* input #track {
+  border: none;
+} */
