--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,7 @@ body {
   height: 8px;
   background-color: hsl(224, 65%, 95%);
   border-radius: 5px;
+  /* background: linear-gradient(90deg, hsl(174, 77%, 80%) 50%, hsl(224, 65%, 95%) 50%); */
 }
 
 .slider::-webkit-slider-thumb {
@@ -239,10 +240,11 @@ body {
   background-image: url('./images/icon-slider.svg');
   background-position: center;
   background-repeat: no-repeat;
+  box-shadow: 0px 15px 10px 2px hsl(174, 77%, 80%);
 }
 
 /* .slider::-webkit-slider-runnable-track {
-  background-color: green;
+  background-color: hsl(174, 77%, 80%);
 } */
 
 .slider::-webkit-slider-thumb:hover {
@@ -263,6 +265,7 @@ body {
   background-image: url('./images/icon-slider.svg');
   background-position: center;
   background-repeat: no-repeat;
+  box-shadow: 0px 15px 10px 2px hsl(174, 77%, 80%);
 }
 
 .slider::-moz-range-thumb:hover {
@@ -273,6 +276,11 @@ body {
   cursor: grab;
 }
 
+.slider::-moz-range-progress {
+  background-color: hsl(174, 77%, 80%);
+  height: 8px;
+  border-radius: 5px;
+}
 
 /* input #track {
   border: none;
