--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,11 @@ body {
   position: absolute;
   height: 0;
   width: 0;
+  opacity: 0;
+}
+
+.checkbox:focus {
+  opacity: 1;
 }
 
 .ball {
@@ -218,7 +223,6 @@ body {
   }
 }
 
-
 .slider {
   -webkit-appearance: none;  /* Override default CSS styles */
   appearance: none;
@@ -227,7 +231,7 @@ body {
   height: 8px;
   background-color: hsl(224, 65%, 95%);
   border-radius: 5px;
-  /* background: linear-gradient(90deg, hsl(174, 77%, 80%) 50%, hsl(224, 65%, 95%) 50%); */
+  /* background: linear-gradient(90deg, black 0%, hsl(224, 65%, 95%) 0%); */
 }
 
 .slider::-webkit-slider-thumb {
@@ -242,10 +246,6 @@ body {
   background-repeat: no-repeat;
   box-shadow: 0px 15px 10px 2px hsl(174, 77%, 80%);
 }
-
-/* .slider::-webkit-slider-runnable-track {
-  background-color: hsl(174, 77%, 80%);
-} */
 
 .slider::-webkit-slider-thumb:hover {
   cursor: pointer;
@@ -275,13 +275,3 @@ body {
 .slider::-moz-range-thumb:active {
   cursor: grab;
 }
-
-.slider::-moz-range-progress {
-  background-color: hsl(174, 77%, 80%);
-  height: 8px;
-  border-radius: 5px;
-}
-
-/* input #track {
-  border: none;
-} */
